samples/_failures_safe/1761527121_2feab0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33169fa2.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_33169fa2.c:158:5: error: expected expression at end of input
  158 |     else
      |     ^~~~
./samples/SAFE/__tmp_33169fa2.c:158:5: error: expected declaration or statement at end of input
